--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/reset.css"> -->
     <title>React App</title>
   </head>
   <body>
